# learning-rust

./: README.md
the-rust-programming-language/: README.md  \
the-rust-programming-language/all-the-places-patterns-can-be-used/: Cargo.toml
the-rust-programming-language/cargo-workspces/: .README.md.swp
the-rust-programming-language/characteristics-of-object-oriented-languages/: Cargo.toml
the-rust-programming-language/customizing-builds-with-release-profiles/: Cargo.toml
the-rust-programming-language/helloworld/: main
the-rust-programming-language/improving-our-io-project/: Cargo.toml
the-rust-programming-language/publishing-a-crate-to-cratesio/: Cargo.toml  README.md
the-rust-programming-language/publishing-a-crate-to-cratesio/src/: lib.rs
the-rust-programming-language/rc-the-reference-counted-smart-pointer/: Cargo.toml
the-rust-programming-language/recoverable-errors-with-result/: hello.txt
the-rust-programming-language/refcell-and-the-interior-mutability-pattern/: Cargo.toml
the-rust-programming-language/reference-cycle-can-leak-memory/: Cargo.toml
the-rust-programming-language/refutability-whenever-a-pattern-might-fail-to-match/: Cargo.toml
the-rust-programming-language/running-code-on-cleanup-with-the-drop-trait/: Cargo.toml
the-rust-programming-language/traits-defining-shared-behavior/: Cargo.toml
the-rust-programming-language/treating-smart-pointers-like-regular-references-with-the-deref-trait/: Cargo.toml
the-rust-programming-language/using-box-to-point-to-data-on-the-heap/: Cargo.toml
(+62 files in other folders)
