[package]
name = "publishing-a-crate-to-cratesio"
version = "0.1.0"
edition = "2021"
description = "Publishing an example crate based on The Rust Programming Language."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
